<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <android.support.constraint.Guideline
    android:id="@+id/center_line"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.5"/>

  <TextView
    android:id="@+id/student_id_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:layout_marginLeft="184dp"
    android:padding="16dp"
    android:text="@string/title_student_detail"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/student_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toRightOf="@+id/student_id_label"
    android:layout_marginLeft="-73dp"
    android:layout_marginTop="-2dp"/>

  <TextView
    android:id="@+id/student_name_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:text="@string/title_student_detail"
    app:layout_constraintTop_toBottomOf="@+id/student_id_label"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"/>

  <EditText
    android:id="@+id/student_name"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPersonName"
    android:hint="@string/title_student_detail"
    app:layout_constraintTop_toBottomOf="@+id/student_id_label"
    app:layout_constraintLeft_toRightOf="@+id/student_name_label"/>

  <TextView
    android:id="@+id/student_created_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:text="Student Id"
    app:layout_constraintTop_toBottomOf="@+id/student_name_label"
    app:layout_constraintLeft_toLeftOf="parent"/>

  <TextView
    android:id="@+id/student_created"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    app:layout_constraintTop_toBottomOf="@+id/student_name_label"
    app:layout_constraintLeft_toRightOf="@+id/student_created_label"/>


  <TextView
    android:id="@+id/student_absences_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:text="@string/student_absence_label"
    app:layout_constraintTop_toBottomOf="@+id/student_created_label"
    app:layout_constraintLeft_toLeftOf="parent"/>

  <Button
    android:id="@+id/notify_parent_button"
    android:text="Text Parent"
    android:layout_width="100dp"
    android:layout_height="70dp"
    android:layout_marginHorizontal="@dimen/item_width"
    android:layout_marginVertical="@dimen/item_width"
    app:layout_constraintTop_toBottomOf="@+id/student_id_label"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginTop="-7dp"
    android:layout_marginRight="-13dp"/>

  <TextView
    android:id="@+id/student_tardies_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:text="@string/student_tardies_label"
    android:padding="25dp"
    app:layout_constraintTop_toBottomOf="@+id/absence_list"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"/>

  <EditText
    android:id="@+id/new_tardy_date"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPersonName"
    app:layout_constraintTop_toBottomOf="@+id/student_tardies_label"
    tools:layout_editor_absoluteX="-8dp"
    android:layout_marginTop="0dp"/>


  <EditText
    android:id="@+id/new_absence_date"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPersonName"
    app:layout_constraintTop_toBottomOf="@+id/student_absences_label"
    tools:layout_editor_absoluteX="0dp"/>

  <Button
    android:id="@+id/new_absence_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/input_absence"
    app:layout_constraintBottom_toBottomOf="@id/new_absence_date"
    app:layout_constraintLeft_toLeftOf="@id/center_line"
    app:layout_constraintRight_toRightOf="parent"
    tools:layout_editor_absoluteY="216dp"/>

  <Button
    android:id="@+id/new_tardy_button"
    android:layout_width="134dp"
    android:layout_height="41dp"
    android:text="@string/input_tardy"
    app:layout_constraintBottom_toBottomOf="@id/new_tardy_date"
    app:layout_constraintLeft_toLeftOf="@id/center_line"
    app:layout_constraintRight_toRightOf="parent"
    tools:layout_editor_absoluteX="218dp"
    tools:layout_editor_absoluteY="421dp"/>
  <ListView
    android:id="@+id/absence_list"
    android:layout_width="0dp"
    android:layout_height="75dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="8dp"
    android:paddingStart="10dp"
    android:paddingEnd="0dp"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="@id/center_line"
    app:layout_constraintTop_toBottomOf="@+id/new_absence_date"/>
  <ListView
    android:id="@+id/tardies_list"
    android:layout_width="0dp"
    android:layout_height="75dp"
    android:layout_marginTop="-92dp"
    android:paddingStart="10dp"
    android:paddingEnd="0dp"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="@id/center_line"
    app:layout_constraintTop_toBottomOf="@+id/new_tardy_date"/>
  <!--
  <Button
    android:id="@+id/admit_date"
    android:layout_width="88dp"
    android:layout_height="wrap_content"
    android:layout_alignTop="@id/reason"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:text="Admit Date"
    android:textAlignment="viewStart"
    android:textSize="20dp"
    tools:layout_editor_absoluteY="-150dp"
    tools:layout_editor_absoluteX="254dp"/>

  <Button
    android:id="@+id/discharge_date"
    android:layout_width="88dp"
    android:layout_height="wrap_content"
    android:layout_alignTop="@id/admit_date"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:text="Discharge Date"
    android:textAlignment="viewStart"
    android:textSize="20dp"
    tools:layout_editor_absoluteY="42dp"
    tools:layout_editor_absoluteX="280dp"/>


-->

</android.support.constraint.ConstraintLayout>
